--- a/index-v2.html
+++ b/index-v2.html
@@ -113,35 +113,51 @@
     </div>
   </header>
   <main>
-    <section class="home-top home-top--v2">
+    <section class="home-top home-top--v2" style="background-image: url('assets/img/home-v2/top.png');">
       <div class="container">
-        <div class="home-top__content">
-          <div class="home-top__line"></div>
-          <h1>Підберемо автомобіль
-            відповідно Вашим
-            потребам та бажанням</h1>
-          <form action="" method="get" class="home-top-form">
-            <div class="home-top-form__title">обери своє авто</div>
-            <div class="home-top-form__row">
-              <label for="s11" class="home-top-form__label">Марка</label>
-              <select name="s11" id="s11" class="home-top-form__select" required>
-                <option value="0" selected>Вибрати марку</option>
-                <option value="1">Марка 2</option>
-                <option value="2">Марка 3</option>
-              </select>
+        <div class="home-top__slider">
+          <div>
+            <div class="home-top__content">
+              <div class="home-top__line"></div>
+              <h1>Підберемо автомобіль відповідно Вашим потребам та бажанням</h1>
+              <a href="#" class="btn home-top__btn">Записатись на тест-драйв</a>
             </div>
-            <div class="home-top-form__row">
-              <label for="s22" class="home-top-form__label">Модель</label>
-              <select name="s22" id="s22" class="home-top-form__select" required>
-                <option value="0" selected>Вибрати модель</option>
-                <option value="1">Марка 2</option>
-                <option value="2">Марка 3</option>
-              </select>
+          </div>
+          <div>
+            <div class="home-top__content">
+              <div class="home-top__line"></div>
+              <h1>Підберемо автомобіль відповідно Вашим 2 потребам та бажанням</h1>
+              <a href="#" class="btn home-top__btn">Записатись на тест-драйв</a>
             </div>
-            <button class="home-top-form__btn" type="submit">пошук</button>
-          </form>
-          <a href="#" class="btn home-top__btn">Записатись на тест-драйв</a>
+          </div>
+          <div>
+            <div class="home-top__content">
+              <div class="home-top__line"></div>
+              <h1>Підберемо автомобіль відповідно Вашим 3 потребам та бажанням</h1>
+              <a href="#" class="btn home-top__btn">Записатись на тест-драйв</a>
+            </div>
+          </div>
         </div>
+        <form action="" method="get" class="home-top-form">
+          <div class="home-top-form__title">обери своє авто</div>
+          <div class="home-top-form__row">
+            <label for="s11" class="home-top-form__label">Марка</label>
+            <select name="s11" id="s11" class="home-top-form__select" required>
+              <option value="0" selected>Вибрати марку</option>
+              <option value="1">Марка 2</option>
+              <option value="2">Марка 3</option>
+            </select>
+          </div>
+          <div class="home-top-form__row">
+            <label for="s22" class="home-top-form__label">Модель</label>
+            <select name="s22" id="s22" class="home-top-form__select" required>
+              <option value="0" selected>Вибрати модель</option>
+              <option value="1">Марка 2</option>
+              <option value="2">Марка 3</option>
+            </select>
+          </div>
+          <button class="home-top-form__btn" type="submit">пошук</button>
+        </form>
       </div>
       <div class="container">
         <div class="home-bands-v2">
